--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_boot_ecommerce_android
 spring.datasource.username = root
 spring.datasource.password = vampire
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
